// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCommentEvent is rendered 1`] = `
<figure
  class="ouiCommentEvent ouiCommentEvent--regular testClass1 testClass2"
>
  <figcaption
    class="ouiCommentEvent__header"
  >
    <div
      class="ouiCommentEvent__headerData"
    >
      <div
        class="ouiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="ouiCommentEvent__headerEvent"
      />
    </div>
  </figcaption>
</figure>
`;

exports[`OuiCommentEvent props event is rendered 1`] = `
<figure
  class="ouiCommentEvent ouiCommentEvent--regular"
>
  <figcaption
    class="ouiCommentEvent__header"
  >
    <div
      class="ouiCommentEvent__headerData"
    >
      <div
        class="ouiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="ouiCommentEvent__headerEvent"
      >
        commented
      </div>
    </div>
  </figcaption>
</figure>
`;

exports[`OuiCommentEvent props timestamp is rendered 1`] = `
<figure
  class="ouiCommentEvent ouiCommentEvent--regular"
>
  <figcaption
    class="ouiCommentEvent__header"
  >
    <div
      class="ouiCommentEvent__headerData"
    >
      <div
        class="ouiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="ouiCommentEvent__headerEvent"
      />
      <div
        class="ouiCommentEvent__headerTimestamp"
      >
        <time>
          21 days ago
        </time>
      </div>
    </div>
  </figcaption>
</figure>
`;

exports[`OuiCommentEvent props type is rendered 1`] = `
<div
  class="ouiCommentEvent ouiCommentEvent--update"
>
  <div
    class="ouiCommentEvent__header"
  >
    <div
      class="ouiCommentEvent__headerData"
    >
      <div
        class="ouiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="ouiCommentEvent__headerEvent"
      />
    </div>
  </div>
</div>
`;
